work on transition issue in mobile, shrink the image sizes, too big

--- a/public/css/_index-about.scss
+++ b/public/css/_index-about.scss
@@ -52,7 +52,7 @@
 }
 
 .aboutus-wrapper:last-of-type{
-    margin-bottom:9vw;
+    margin-bottom:3vw;
 }
 .panel{
     text-align: center;
