--- a/public/css/_locations.scss
+++ b/public/css/_locations.scss
@@ -60,7 +60,7 @@ a[href^=tel]:hover{
     background-position-y: 56%; 
 
 }
-.test{
+.map-overlay{
     background-color:white;
     height:100%;
     width:100%;
